# mailing_service

./: .env.sample  README.md  auth_data.json  blog_data.json  contenttypes_data.json  data.json  mailing_data.json  pyproject.toml  users_data.json
blog/: forms.py  models.py  services.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blogpost_is_published.py
blog/templates/blog/: blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html
config/: settings.py  urls.py
mailing/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: fill.py  mailing_start.py  runapscheduler.py
mailing/migrations/: 0001_initial.py  0002_message.py  0003_mailingsettings.py  0004_mailingattempt.py  0005_alter_mailingattempt_options_and_more.py  0006_client_owner_mailingsettings_owner_message_owner.py  0007_alter_mailingsettings_options_and_more.py  0008_alter_mailingattempt_datetime_last_try.py  0009_alter_mailingsettings_mailing_status.py
mailing/templates/mailing/: base.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  index.html  mailingattempt_list.html  mailingsettings_confirm_delete.html  mailingsettings_detail.html  mailingsettings_form.html  mailingsettings_list.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html
users/: forms.py  models.py  services.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_company.py  0003_alter_user_options.py
(+4 files in other folders)
