[tool.poetry]
name = "mailing-service"
version = "0.1.0"
description = ""
authors = ["Marina Krasnoruzhskaya <krasnoruzhskayamarina@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2.9"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
pytz = "^2024.1"
django-crontab = "^0.7.1"
docutils = "^0.21.2"
django-apscheduler = "^0.6.2"
ipython = "^8.26.0"
phonenumberslite = "^8.13.43"
django-phonenumber-field = "^8.0.0"
pytils = "^0.4.1"
pillow = "^10.4.0"
redis = "^5.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
